# pyRw

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.txt  pyproject.toml  requirements.txt
example/: example.py
pyRw/: autocorr.py  bootstrap.py  core.py  mrw.py  multirw.py  utils.py
pyRw/tests/: basicTest.py
pyRw/utils/: histutils.py
src/: multirw.py
src/tests/: basicTest.py
src/utils/: testutils.py
tests/: test_core.py  test_utils.py
