[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyRw"
version = "0.0.1"
authors = [{name="Alexis Provatas", email="2414441@swansea.ac.uk"}]
description = "Fast multiple histogram reweighting in Python using numba"
readme = "README.md"
requires-python = ">= 3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/vataspro/pyRw"
"Bug Tracker" = "https://github.com/vataspro/pyRw/issues"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
